plugins {
	id ("jacoco")
	id("java")
	id("org.springframework.boot") version "3.3.5"
	id("io.spring.dependency-management") version "1.1.6"
}

group = "com.mpsp"
version = "0.0.1-SNAPSHOT"

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	all*.exclude group:'org.springframework.boot', module:'spring-boot-starter-logging'
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2023.0.3")
    openapiVersion = '2.6.0'
    nimubs = '9.45'
	set('sdkVersion',"2.29.7")
}
dependencies {
	// Spring Boot Starters
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Spring Cloud
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

	// nimbus-jose-jwt library
	implementation "com.nimbusds:nimbus-jose-jwt:${nimubs}"

	// Springdoc OpenAPI
	implementation "org.springdoc:springdoc-openapi-starter-common:${openapiVersion}"
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${openapiVersion}"

	// AWS SDK for SESv2
	implementation 'software.amazon.awssdk:sesv2'

	// AWS SDK for SNS
	implementation 'software.amazon.awssdk:sns'

	// Lombok
	compileOnly("org.projectlombok:lombok")
	annotationProcessor("org.projectlombok:lombok")

	// MySQL Connector
	runtimeOnly("com.mysql:mysql-connector-j")

	// Testing dependencies
	testImplementation("org.springframework.boot:spring-boot-starter-test")
	testImplementation("org.springframework.security:spring-security-test")
	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
	testImplementation 'com.openpojo:openpojo:0.9.1'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
		mavenBom "software.amazon.awssdk:bom:${sdkVersion}"
	}
}

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
	options.compilerArgs += '-parameters'
}

test {
	jvmArgs '--add-opens', 'java.base/java.time=ALL-UNNAMED'
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
	}
}